@@ -1,24 +1,19 @@
-package secret_project;
+package secret_project.loader;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.GeneralSecurityException;
-import java.security.InvalidAlgorithmParameterException;
-import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
-import java.security.spec.InvalidKeySpecException;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
-import javax.crypto.NoSuchPaddingException;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.PBEParameterSpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import secret_project.exception.UsageException;
 
 public class Encrypter {
 
@@ -37,18 +32,17 @@ public class Encrypter {
 		this.encryptionKey = encryptionKey.toCharArray();
 	}
 
-	public String encrypt(String toEncrypt) throws GeneralSecurityException, UnsupportedEncodingException {
+	public String decrypt(String toDecrypt) throws GeneralSecurityException, IOException {
+		Cipher cipher = initCipher(Cipher.DECRYPT_MODE);
+		return new String(cipher.doFinal(base64Decode(toDecrypt)));
+	}
+	
+	public String encrypt(String toEncrypt) throws GeneralSecurityException {
 		Cipher cipher = initCipher(Cipher.ENCRYPT_MODE);
 		return base64Encode(cipher.doFinal(toEncrypt.getBytes()));
 	}
 
-	public String decrypt(String toDecrypt) throws GeneralSecurityException, UnsupportedEncodingException, IOException {
-		Cipher cipher = initCipher(Cipher.DECRYPT_MODE);
-		return new String(cipher.doFinal(base64Decode(toDecrypt)));
-	}
-
-	private Cipher initCipher(int mode) throws NoSuchAlgorithmException, InvalidKeySpecException,
-			NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException {
+	private Cipher initCipher(int mode) throws GeneralSecurityException  {
 		SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(PBE_WITH_MD5_AND_DES);
 		SecretKey key = keyFactory.generateSecret(new PBEKeySpec(encryptionKey));
 
@@ -58,17 +52,22 @@ public class Encrypter {
 	}
 	
 	private String base64Encode(byte[] bytes) {
-		return new BASE64Encoder().encode(bytes);
+		return new String(Base64.getEncoder().encode(bytes));
 	}
 
 	private byte[] base64Decode(String property) throws IOException {
-		return new BASE64Decoder().decodeBuffer(property);
+		return Base64.getDecoder().decode(property);
 	}
 
-	public void createEncryptedFile(String filePath) throws GeneralSecurityException, IOException {
-		byte[] fileBytes = new FileBytesReader().read(filePath);
-		
-		String encryptedStr = encrypt(new String(fileBytes));
-		Files.write(Paths.get(filePath + ENCRYPTED_FILE_POSTFIX), encryptedStr.getBytes());
+	public void createEncryptedFile(String filePath) throws UsageException {
+		try {
+			byte[] fileBytes = new FileBytesReader().read(filePath);
+			String encryptedStr = encrypt(new String(fileBytes));
+			Path file = Paths.get(filePath + ENCRYPTED_FILE_POSTFIX);
+			
+			Files.write(file, encryptedStr.getBytes());
+		} catch (GeneralSecurityException | IOException exception) {
+			throw new UsageException(exception);
+		}
 	}
 }
